syntax = "proto3";

package user;

option go_package = "./user";

message AuthReq {
    string username = 1;
    string password = 2;
}

message AuthReply {
    int64 userId = 1;
}


message CurrentReq {
    int64 userId = 1;
}

message CurrentReply {
    string username = 1;
}

service user {
    rpc Login(AuthReq) returns(AuthReply);

    rpc Register(AuthReq) returns(AuthReply);

    rpc Current(CurrentReq) returns(CurrentReply);
}